tests/algorithms/transpiler/FS/searches/interpolation_search.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/searches/interpolation_search.fs(97,67): error FS0001: This expression was expected to have type
    int    
but here has type
    int64    

/workspace/mochi/tests/algorithms/transpiler/FS/searches/interpolation_search.fs(103,83): error FS0001: The type 'int' does not match the type 'int64'

/workspace/mochi/tests/algorithms/transpiler/FS/searches/interpolation_search.fs(105,72): error FS0001: The type 'int' does not match the type 'int64'
